# django-personal-site

./: .pre-commit-config.yaml  dev-up.sh  docker-compose.prod.yml  docker-compose.yml  prod-up.sh  pyproject.toml
nginx/: nginx.conf
personal/: Dockerfile  Dockerfile.prod  README.md  requirements.txt
personal/apps/core/templates/: base.html
personal/apps/core/templates/registration/: login.html
personal/articles/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
personal/articles/migrations/: 0001_initial.py
personal/articles/templates/articles/: article_add.html  article_add_success.html  article_list.html
personal/articles/tests/: test_article_add_view.py  test_article_list_view.py
personal/config/: asgi.py  settings.py  urls.py  wsgi.py
personal/static/css/: styles.css
tailwind/: build.sh  custom.css  package-lock.json  package.json  tailwind.config.js
