[project]
name = "personal"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.11,<4.0"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.14.0",
    "django-unfold>=0.99.0",
    "django-widget-tweaks>=1.5.1",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "coverage>=7.14.3",
    "djlint>=1.39.4",
    "flake8>=7.3.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''
skip-string-normalization = false
